Adding kibana4 beta to the mix

--- a/docker/logstash/Dockerfile
+++ b/docker/logstash/Dockerfile
@@ -9,6 +9,12 @@ RUN wget https://download.elasticsearch.org/logstash/logstash/packages/debian/lo
     dpkg -i /tmp/logstash-contrib.deb ; \
     apt-get -f -y install && \
     rm -rf /tmp/logstash.deb /tmp/logstash-contrib.deb
+# kibana4 requires elasticsearch 1.4.0 or greater (https://github.com/elasticsearch/kibana/issues/1629)
+RUN rm -rf /opt/logstash/vendor/jar/elasticsearch-* 
+RUN (cd /tmp && \
+    wget https://download.elasticsearch.org/elasticsearch/elasticsearch/elasticsearch-1.4.0.tar.gz -O pkg.tar.gz && \
+    tar zxf pkg.tar.gz && mv elasticsearch-* /opt/logstash/vendor/jar/ &&\
+    rm -rf /tmp/*)
 COPY ls-ftplogs.conf /etc/ls-ftplogs.conf
 EXPOSE 1514
 ENTRYPOINT ["/opt/logstash/bin/logstash"]
