--- a/docker/logstash/ls-ftplogs.conf
+++ b/docker/logstash/ls-ftplogs.conf
@@ -66,6 +66,8 @@ filter {
 }
 
 output {
-  elasticsearch { host => "elasticsearch" }
+  elasticsearch { 
+    host => "elasticsearch"
+  }
   stdout { codec => rubydebug }
 }
