Making sincedb a docker volume so it persists containers

--- a/docker/logstash/ls-ftplogs.conf
+++ b/docker/logstash/ls-ftplogs.conf
@@ -5,6 +5,7 @@ input {
     path => "/opt/logs/proftpd/2016/**/transfer_log"
     path => "/opt/logs/proftpd/2017/**/transfer_log"
     path => "/opt/logs/proftpd/2018/**/transfer_log"
+    sincedb_path => "/opt/sincedb/sincedb.logstash"
     start_position => "beginning"
   }
 
