Performance modifications for elasticsearch.

--- a/docker/elasticsearch/Dockerfile
+++ b/docker/elasticsearch/Dockerfile
@@ -1,6 +1,7 @@
 FROM debian:jessie
 ENV http_proxy https://gateway.ad.renci.org:8080
 ENV https_proxy https://gateway.ad.renci.org:8080
+ENV ES_HEAP_SIZE 4g
 RUN apt-get update && \
     apt-get install -y openjdk-7-jre wget
 ENV JAVA_HOME /usr/lib/jvm/java-7-openjdk-amd64
